# plagiarism-detector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: plagiarism_detector.ipynb
