[tool.pdm]

[tool.pdm.dev-dependencies]
study = [
    "ipywidgets>=8.1.2",
    "mkdocs>=1.6.0",
    "ipykernel>=6.29.4",
    "openpyxl>=3.1.3",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tensorflow",
    "transformers==4.32.0",
    "datasets==2.12.0",
    "tokenizers==0.13.3",
    "tf-keras==2.16.0",
    "sentencepiece==0.2.0",
    "torch==2.2.2",
    "scikit-learn==1.5.0",
    "accelerate==0.30.1",
    "sentence-transformers==2.3.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}